# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members =["clock", "without-bundler"]

[workspace.dependencies]
iced = "0.13.1"
chrono = "0.4"
tracing-subscriber = "0.3"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }